--- a/css/scenario1.css
+++ b/css/scenario1.css
@@ -970,12 +970,15 @@ border-top: 1px dashed #cccccc;
   background: #efefef;
   margin-top: 40px;
   padding-top:30px;
-  padding: 30px;
 }
 
 #avantages .ui.segment {
-  padding-top:30px;
+  padding: 30px;
 }
+
+/* #avantages .ui.segment.passedFooter {
+  padding:30px 30px 150px 30px;
+} */
 
 #avantages h2{
   font-weight: normal;
@@ -994,6 +997,8 @@ border-top: 1px dashed #cccccc;
     color: #333;
     margin-bottom: 5px;
 }
+
+
 
 
 /*******************************
