correct css for ie

--- a/css/scenario1.css
+++ b/css/scenario1.css
@@ -569,6 +569,7 @@ i.huge.icons {
 
 .garanties .ui.segment .iconInfo{
   width: 17px;
+  height: 17px;
   vertical-align: -3px;
   margin-left: 3px;
 }
