--- a/css/scenario3.css
+++ b/css/scenario3.css
@@ -847,6 +847,7 @@ i.huge.icons {
 
 .garanties .ui.segment .legende img{
   width: 20px;
+  height: 20px;
   margin-right: 10px;
   vertical-align: -3px;
 }
