--- a/css/semantic.css
+++ b/css/semantic.css
@@ -72,6 +72,12 @@ html {
   /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
+
+    zoom:1;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1)
 }
 
 /**
